fix concept raw data chips overflow

--- a/app/assets/stylesheets/concepts.scss
+++ b/app/assets/stylesheets/concepts.scss
@@ -167,3 +167,9 @@ div.synonym-change-request button {
   margin-top: -4px;
 }
 
+#details_content .chip-button-component-container {
+  word-break: break-word !important; /* Prevent breaking in the middle of words */
+  overflow-wrap: break-word !important; /* Ensure words wrap properly */
+  white-space: normal !important; /* Allow text to wrap */
+}
+
